# test-kalashnikov-qt-cv

./: .gitignore  CMakeLists.txt  README.md
src/app_cv/: CameraWorker.cpp  CameraWorker.h  CmdLineHelper.cpp  CmdLineHelper.h  FrameProvider.cpp  FrameProvider.h  loop.cpp  loop.h  main.cpp  main.h  options.cpp  options.h
src/app_cv/core/: defines.h  loop.cpp  loop.h  options.cpp  options.h
src/app_cv_client/: main.cpp
src/app_cv_test/: main.cpp
src/app_qt/: MainWindow.cpp  MainWindow.h  main.cpp
src/app_qt/gui/: MainWindow.cpp  MainWindow.h
src/common_includes/chip/common/: defines.h
src/lib_api/include/chip/: api.h  common.h  core.h
src/lib_api/include/chip/api/: BaseErrorable.h  FrameConsumer.h  FrameInfo.h  common.h
src/lib_api/include/chip/common/: BaseErrorable.h  FrameConsumer.h  MappedData.h  SharedMemory.h
src/lib_api/include/chip/core/: BaseErrorable.h  SharedMemory.h
src/lib_api/src/api/: BaseErrorable.cpp  FrameConsumer.cpp  FrameInfo.cpp
src/lib_api/src/common/: BaseErrorable.cpp  FrameConsumer.cpp  SharedMemory.cpp
src/lib_api/src/core/: BaseErrorable.cpp  SharedMemory.cpp
src/lib_cmn/include/chip/: ShareData.h  SharedMemory.h  ShmException.h  common.h
src/lib_cmn/include/chip/common/: Exception.h  SharedMemory.h
src/lib_cmn/include/chip/core/: ShareData.h
src/lib_cmn/include/libcmn/: ShareData.h
src/lib_cmn/src/: Exception.cpp  ShmException.cpp  common.cpp
